APPS-1015 Refactor REST API of the service (#65)
* configs

* restore and backup

* utility find method

* remove name from config

* handlers

* restore model

* backup backend receices storage (for unification)

* scheduler

* configuration services

* restore logic

* regen API

* restore

* validators

* rollback docs

* Update internal/server/config_handlers.go


* Update pkg/service/backup_scheduler.go


* Update pkg/service/backup_scheduler.go


* Update pkg/service/configuration_service_policy_test.go


* extract config elements to own files

* dereference name

* dereference name in tests

* Update pkg/model/restore_request.go


* de-capitalise http error

* add documentation

* update OpenAPI spec

* update configuration files

---------
